HANDS CAN NOW BE DRAWN! <3

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -18,7 +18,7 @@
 	</array>
 	<key>cardNames</key>
 	<array>
-		<string>Lightning Bolt</string>
+		<string>Zap</string>
 		<string>Fireball</string>
 		<string>Ice Shards</string>
 		<string>Hurricane</string>
