WEAPON CARDS NOW WORK (no multiple strikes yet)

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -2,8 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cardValues</key>
+	<array>
+		<integer>3</integer>
+		<integer>1</integer>
+		<integer>2</integer>
+		<integer>3</integer>
+		<integer>4</integer>
+	</array>
 	<key>cardTypes</key>
 	<array>
+		<string>Weapon</string>
 		<string>Attack</string>
 		<string>Attack</string>
 		<string>Attack</string>
@@ -11,6 +20,7 @@
 	</array>
 	<key>cardWeights</key>
 	<array>
+		<string>2</string>
 		<integer>1</integer>
 		<integer>2</integer>
 		<integer>3</integer>
@@ -18,6 +28,7 @@
 	</array>
 	<key>cardNames</key>
 	<array>
+		<string>Laser Pistol</string>
 		<string>Zap</string>
 		<string>Fireball</string>
 		<string>Ice Shards</string>
