--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>cardValues</key>
 	<array>
+		<integer>3</integer>
 		<string>0</string>
 		<integer>3</integer>
 		<integer>1</integer>
@@ -13,6 +14,7 @@
 	</array>
 	<key>cardTypes</key>
 	<array>
+		<string>Heal</string>
 		<string>EMP</string>
 		<string>Weapon</string>
 		<string>Attack</string>
@@ -24,6 +26,7 @@
 	<array>
 		<integer>2</integer>
 		<integer>2</integer>
+		<integer>2</integer>
 		<integer>1</integer>
 		<integer>2</integer>
 		<integer>3</integer>
@@ -31,6 +34,7 @@
 	</array>
 	<key>cardNames</key>
 	<array>
+		<string>Heal</string>
 		<string>EMP</string>
 		<string>Laser Pistol</string>
 		<string>Zap</string>
