prelim Shield card

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>cardValues</key>
 	<array>
+		<string>0</string>
 		<integer>3</integer>
 		<string>0</string>
 		<integer>3</integer>
@@ -14,6 +15,7 @@
 	</array>
 	<key>cardTypes</key>
 	<array>
+		<string>Shield</string>
 		<string>Heal</string>
 		<string>EMP</string>
 		<string>Weapon</string>
@@ -24,6 +26,7 @@
 	</array>
 	<key>cardWeights</key>
 	<array>
+		<string>2</string>
 		<integer>2</integer>
 		<integer>2</integer>
 		<integer>2</integer>
@@ -34,6 +37,7 @@
 	</array>
 	<key>cardNames</key>
 	<array>
+		<string>Shield</string>
 		<string>Heal</string>
 		<string>EMP</string>
 		<string>Laser Pistol</string>
