--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cardImage</key>
+	<array>
+		<string></string>
+		<string></string>
+		<string></string>
+		<string></string>
+		<string></string>
+		<string>fireballCard.png</string>
+		<string></string>
+		<string></string>
+	</array>
 	<key>cardValues</key>
 	<array>
 		<string>0</string>
