EMP and discard card art! And other art improvements.

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -17,7 +17,7 @@
 	<array>
 		<string>spellShieldCard.png</string>
 		<string></string>
-		<string></string>
+		<string>EMPCard.png</string>
 		<string></string>
 		<string></string>
 		<string>fireballCard.png</string>
