ALL BASIC SOUND EFFECTS!

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -7,7 +7,7 @@
 		<string>facedownCard</string>
 		<string>healCard</string>
 		<string>facedownCard</string>
-		<string>laserPistolCard</string>
+		<string>weaponCard</string>
 		<string>zapCard</string>
 		<string>fireballCard</string>
 		<string>waterfallCard</string>
