first try at heal

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -27,7 +27,7 @@
 	<key>cardFileNames</key>
 	<array>
 		<string>spellShieldCard</string>
-		<string></string>
+		<string>healCard</string>
 		<string>EMPCard</string>
 		<string></string>
 		<string></string>
