--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -33,7 +33,7 @@
 		<string>zapCard</string>
 		<string>fireballCard</string>
 		<string>waterfallCard</string>
-		<string></string>
+		<string>hurricaneCard</string>
 	</array>
 	<key>cardValues</key>
 	<array>
