prelim waterfall art

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -32,7 +32,7 @@
 		<string></string>
 		<string>zapCard</string>
 		<string>fireballCard</string>
-		<string>waterfallCard</string>
+		<string>waterfallCard1</string>
 		<string>hurricaneCard</string>
 	</array>
 	<key>cardValues</key>
