Weapon art added!

--- a/Spellthrowers/Config.plist
+++ b/Spellthrowers/Config.plist
@@ -29,7 +29,7 @@
 		<string>spellShieldCard</string>
 		<string>healCard</string>
 		<string>EMPCard</string>
-		<string></string>
+		<string>laserPistolCard</string>
 		<string>zapCard</string>
 		<string>fireballCard</string>
 		<string>waterfallCard1</string>
