--- a/Spellthrowers/Spellthrowers-Info.plist
+++ b/Spellthrowers/Spellthrowers-Info.plist
@@ -33,6 +33,8 @@
 		<string>armv7</string>
 		<string>gamekit</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
